<resources>
    <string name="app_name">BallotBlock</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_id">Email ID</string>
    <string name="log_in">Log In</string>
    <string name="todo">TODO</string>
    <string name="dont_have_a_voter_account">Dont have a Voter Account?</string>
    <string name="register_now">Register Now</string>
    <string name="create_an_account">Create an Account..</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="create_new_password">Create New Password</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_cnic">Enter CNIC</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_address">Enter Address</string>
    <string name="setup_your_profile">Setup your Profile</string>
    <string name="finish">Finish</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="please_enter_your_email_below_to_receive_your_password_reset_instructions">Please Enter your email below to receive your password reset instructions.</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="candidate">Candidate</string>
    <string name="home">Home</string>
    <string name="apply_for_candidate">Apply For Candidate</string>
    <string name="election_date_will_appear_here">[Election Date will appear here]</string>
    <string name="voting_start_time_will_appear_here">[Voting Start Time will appear here]</string>
    <string name="voting_end_time_will_appear_here">[Voting End Time will appear here]</string>
    <string name="designations">Designations:</string>
    <string name="election_date">Election Date:</string>
    <string name="voting_start_time">Voting Start Time:</string>
    <string name="voting_end_time">Voting End Time:</string>
    <string name="designation_will_appear_here">[Designation will appear here]</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="election_type_will_appear_here">Election Type will appear here</string>
    <string name="designation">Designation:</string>
    <string name="status_will_appear_here">Status will appear here</string>
    <string name="candidate_s_name">Candidate\'s Name</string>
    <string name="election_type">Election Type</string>
    <string name="status">Status</string>
    <string name="save_to_sqlite">Save to SQLite</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="shared_preferences_stored_data">Shared Preferences Stored Data</string>
    <string name="lets_finish">Lets Finish...</string>
    <string name="upload_id_proof">Upload ID Proof</string>
    <string name="browse">Browse</string>
    <string name="show_data">Show Data</string>
    <string name="vote_now">Vote Now</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="what_are_elections">What are Elections?</string>
    <string name="what_is_voting">What is Voting?</string>
    <string name="play_pause">Play/Pause</string>
    <string name="stop">Stop</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="count_will_appear_here">Count will Appear Here</string>
    <string name="maps">Maps</string>
    <string name="airplane_mode_broadcast">Airplane Mode Broadcast</string>
    <string name="candidate_list">Candidate List</string>
    <string name="vote">Vote</string>
    <string name="app_visit_count">App Visit Count</string>
    <string name="music_to_relax">Music to Relax</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="logout">Logout</string>
    <string name="wallet">Wallet</string>
    <string name="connect_wallet">Connect Wallet</string>
    <string name="connect">Connect</string>
    <string name="update_profile">Update Profile</string>
    <string name="full_name">Full Name:</string>
    <string name="email">Email:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="election_status">Election Status</string>
    <string name="apply_to_vote">Apply to Vote</string>
    <string name="elections">Elections</string>
    <string name="address_will_display_here">Address will display here</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="get_balance">Get Balance</string>
    <string name="my_address">My Address</string>
    <string name="send_ether">Send Ether</string>
</resources>