<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
tools:context=".navigation.CandidateListAdd">

<EditText
    android:id="@+id/candidateNameET"
    android:layout_width="265dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="55dp"
    android:layout_marginTop="69dp"
    android:layout_marginEnd="75dp"
    android:ems="10"
    android:hint="@string/candidate_s_name"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/candidateElectionTypeET"
    android:layout_width="265dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/candidateNameET"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="55dp"
    android:layout_marginTop="45dp"
    android:layout_marginEnd="75dp"
    android:ems="10"
    android:hint="@string/election_type"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/candidateDesignationET"
    android:layout_width="265dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/candidateElectionTypeET"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="55dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="75dp"
    android:ems="10"
    android:hint="@string/designation"
    android:importantForAutofill="no"
    android:inputType="number|textPersonName|phone"
    android:minHeight="48dp"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/candidateVotingEndTimeET"
    android:layout_width="265dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/candidateDesignationET"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="55dp"
    android:layout_marginTop="52dp"
    android:layout_marginEnd="75dp"
    android:ems="10"
    android:hint="@string/voting_end_time"
    android:importantForAutofill="no"
    android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
    android:minHeight="48dp"
    tools:ignore="TextContrastCheck" />

<EditText
    android:id="@+id/candidateStatusET"
    android:layout_width="265dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/candidateVotingEndTimeET"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="55dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="75dp"
    android:ems="10"
    android:hint="@string/status"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="159dp"
        android:layout_height="80dp"
        android:layout_below="@id/candidateStatusET"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="75dp"
        android:text="@string/save_to_sqlite"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>