<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBackground"
    android:textAlignment="textStart">

    <Button
        android:id="@+id/broadcastBtn"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:drawableStart="@drawable/resize_ic_list"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/airplane_mode_broadcast"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relaxBtn" />

    <Button
        android:id="@+id/relaxBtn"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:drawableStart="@drawable/resize_ic_list"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/music_to_relax"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Candidate_list_btn" />

    <Button
        android:id="@+id/Vote_Now_btn"
        android:drawableStart="@drawable/resize_vote_icon"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:drawablePadding="12dp"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:text="@string/vote"
        android:textColor="@color/white"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/appVisitCountBtn"
        android:drawableStart="@drawable/resize_candidate_icon"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:drawablePadding="12dp"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:text="@string/app_visit_count"
        android:textColor="@color/white"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vote_Now_btn" />

    <Button
        android:id="@+id/faqBtn"
        android:drawableStart="@drawable/resize_profie_icon"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:drawablePadding="12dp"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:text="@string/frequently_asked_questions"
        android:textColor="@color/white"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appVisitCountBtn" />

    <Button
        android:id="@+id/Election_type_btn"
        android:drawableStart="@drawable/resize_ic_election"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/election_type"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faqBtn" />

    <Button
        android:id="@+id/Candidate_list_btn"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themePrimary"
        android:drawableStart="@drawable/resize_ic_list"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/candidate_list"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Election_type_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>